2014-04-06  Eric Gregory <mrericsir@gmail.com>

    * Modipulate is now based on the newer libopenmpt
	library instead of libmodplug.
	
	* License is now BSD (formerly LGPL.)
	
	* Instruments now use a 0-based index.


2012-04-08  Eric Gregory <mrericsir@gmail.com>

    * Modipulate now has a C API, with a
    second library providing a Lua API.

    * Now using CMake as a build system.
    
    * Windows support is now under development.  It
    compiles and runs on Linux, Mac has not yet
    been tested.
    
    * CodeLite is no longer required, though CMake
    can generate project files for CodeLite and many
    other IDEs.


2011-09-22  Eric Gregory <mrericsir@gmail.com>

    * Welcome to Modipulate. This library is intended for
    manipulation between games and music.

    * Currently, it's built only with Lua interface for
    usage with our Love demos.

    * This library is NOT yet stable. It requires CodeLight
    to compile, is unoptimized, and is missing many desired
    functions. 
